# lightroom

./: .gitignore  .gitmodules  LightroomClone.sln  README.md  gen_filters.py
docs/: DLL_DEPENDENCY_TROUBLESHOOTING.md  HYBRID_ARCHITECTURE_USAGE.md  HYBRID_COMPUTE_PIXEL_SHADER_ARCHITECTURE.md  LIBRAW_COMPILE.md  LIBRAW_DLL_DEPLOYMENT.md  LIBRAW_INTEGRATION.md  LIBRAW_NEXT_STEPS.md  LIBRAW_SETUP.md  LIBRAW_SETUP_COMPLETE.md  RAW_FORMAT_DESIGN.md  RAW_IMPLEMENTATION_STATUS.md  VIDEO_OPTIMIZATION_SUMMARY.md  VIDEO_PERFORMANCE_ANALYSIS.md  WINSOCK_CONFLICT_ANALYSIS.md  WINSOCK_SOLUTION.md
resources/luts/: README.md
scripts/: convert_to_utf8_bom.ps1  copy_libraw_dll.ps1
src/Lightroom.App/: App.xaml  App.xaml.cs  Lightroom.App.csproj  MainWindow.xaml  MainWindow.xaml.cs
src/Lightroom.App/Controls/: FilmstripView.xaml  FilmstripView.xaml.cs  ImageEditorView.xaml  ImageEditorView.xaml.cs  LeftPanel.xaml  LeftPanel.xaml.cs  RightPanel.xaml  RightPanel.xaml.cs  ThumbnailItem.cs  TopMenuBar.xaml  TopMenuBar.xaml.cs
src/Lightroom.App/Core/: NativeMethods.cs
src/Lightroom.App/Properties/: Resources.Designer.cs  Settings.Designer.cs  launchSettings.json
src/Lightroom.Core/: CMakeLists.txt  D3D9Interop.cpp  D3D9Interop.h  ImageLoader.h  ImageProcessor.cpp  ImageProcessor.h  LibRawWrapper.h  Lightroom.Core.vcxproj  Lightroom.Core.vcxproj.filters  LightroomCore.def  LightroomSDK.cpp  LightroomSDK.h  LightroomSDKTypes.h  LightroomSDK_Internal.h  LightroomSDK_Video.cpp  RAWImageInfo.h  RAWImageLoader.cpp  RAWProcessor.cpp  RAWProcessor.h  RenderGraph.cpp  RenderGraph.h  RenderNode.cpp  RenderNode.h  RenderTargetManager.cpp  RenderTargetManager.h  StandardImageLoader.h
src/Lightroom.Core/ImageProcessing/: FFmpegVideoLoader.cpp  FFmpegVideoLoader.h  GPUTileCache.cpp  GPUTileCache.h  ImageExporter.cpp  ImageExporter.h  ImageLoader.h  ImageProcessor.cpp  ImageProcessor.h  ImagePyramid.cpp  ImagePyramid.h  LibRawWrapper.cpp  LibRawWrapper.h  RAWImageLoader.cpp  RAWImageLoader.h  RAWProcessor.h  StandardImageLoader.cpp  TILE_LOADING_OPTIMIZATION.md  TileLoader.cpp  TileLoader.h  VideoLoader.h  VideoProcessor.cpp  VideoProcessor.h
src/Lightroom.Core/RenderNodes/: BrightnessContrastNode.cpp  BrightnessContrastNode.h  ComputeNode.cpp  ComputeNode.h  FilterNode.cpp  FilterNode.h  ImageAdjustNode.cpp  ImageAdjustNode.h  PassthroughNode.cpp  PassthroughNode.h  RAWDemosaicComputeNode.cpp  RAWDemosaicComputeNode.h  RAWDevelopNode.cpp  RAWDevelopNode.h  RGBToYUVNode.cpp  RGBToYUVNode.h  RenderNode.cpp  RenderNode.h  ScaleNode.cpp  ScaleNode.h  TileRenderNode.cpp  TileRenderNode.h  YUVToRGBNode.cpp  YUVToRGBNode.h
src/Lightroom.Core/VideoProcessing/: FFmpegHardwareVideoLoader.cpp  FFmpegHardwareVideoLoader.h  FFmpegSoftwareVideoLoader.cpp  FFmpegSoftwareVideoLoader.h  FFmpegVideoLoader.cpp  FFmpegVideoLoader.h  LightroomSDK_Video.cpp  VideoExporter.cpp  VideoExporter.h  VideoPerformanceProfiler.h  VideoProcessor.cpp
src/Lightroom.Core/d3d11rhi/: Common.h  D3D11CommandContext.cpp  D3D11CommandContext.h  D3D11IndexBuffer.cpp  D3D11IndexBuffer.h  D3D11RHI.cpp  D3D11RHI.h  D3D11RHIDeclare.h  D3D11RHIPrivate.h  D3D11RenderTarget.cpp  D3D11RenderTarget.h  D3D11ReourceTraits.h  D3D11Shader.cpp  D3D11Shader.h  D3D11State.cpp  D3D11State.h  D3D11StateCachePrivate.cpp  D3D11StateCachePrivate.h  D3D11Texture1D.cpp  D3D11Texture1D.h  D3D11Texture2D.cpp  D3D11Texture2D.h  D3D11TextureCube.cpp  D3D11TextureCube.h  D3D11TilePool.cpp  D3D11TilePool.h  D3D11UniformBuffer.cpp  D3D11UniformBuffer.h  D3D11UnorderedAccessView.cpp  D3D11UnorderedAccessView.h  D3D11VertexBuffer.cpp  D3D11VertexBuffer.h  D3D11ViewPort.cpp  D3D11ViewPort.h  D3D11WindowDevice.cpp  D3DShaderUtil.cpp  D3DShaderUtil.h  DynamicRHI.cpp  DynamicRHI.h  EnumAsByte.h  (+25 more)
